# curs_worck_4

./: README.md  pyproject.toml
src/: abs_json.py  abstract_api.py  app.py  hh_api.py  json_manager.py  modul.py  superjob_api.py  user_interaction.py  vacancy.py
tests/: test_1.py
